# spec_project

./: .env.example  .gitattributes  .gitignore  AGENTIC_SYSTEM_IMPLEMENTATION.md  CLI_README.md  README.md  __init__.py  config.yaml  currency_assistant_architecture.md  dev_backend.py  example_llm_usage.py  example_ml_usage.py  example_news_sentiment.py  gpu.py  main.py  ml_config.yaml  ml_forecasting_experiment.ipynb  package-lock.json  personal_docs.md  pyproject.toml  requirements_llm.txt  test.ipynb  test.py  test_advanced_models.py  test_agents_with_real_data.py  test_all_components.py  test_base_agent.py  test_calendar_generalized.py  test_cli.py  test_cost_agent.py  test_data_collection.py  test_decision_engine.py  test_market_agent.py  test_ml_real_data.py  test_model_selection.py  test_multi_agent_workflow.py  test_news_sentiment.py  test_providers.py  test_risk_agent.py  test_scraping_cli.py  (+1 more)
app/: config.py
backend/: __init__.py  dependencies.py  main.py
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
core/: __init__.py  analyzers.py  decision_engine.py  models.py
data/: __init__.py  cache.py  collector.py  currency_assistant.db  database.py  models.py  yfinance_collector.py
demo/: agent_communication_format.py  economic_calendar_output.py  exchange_rate_output.py  llm_analysis_output.py  ml_prediction_output.py  news_sentiment_output.py  technical_indicators_output.py  web_scraping_output.py
docs/: API.md  CONTEXT_REFERENCE.md  FUTURE_ENHANCEMENTS.md  PHASE1_IMPLEMENTATION.md  PHASE2_IMPLEMENTATION.md  PHASE3_IMPLEMENTATION.md  PHASE4_IMPLEMENTATION.md  agent_scraping_tool.md  chat_interface_plan.md  chat_routing_plan.md  data_collection_todo.md  data_requirements.md  interactive_cli_plan.md  langgraph_agent_plan.md  phase2_ml_ai_implementation.md  project_architecture.md  project_todo.md  provider_cost_analysis_challenges.md  system_stabilization_plan.md  tool_communication_protocol.md  web_scraper.md
frontend/: README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ml/: __init__.py  features.py  forecaster.py  models.py  trainer.py
ml_models/: ADVANCED_MODELS_INTEGRATION.md  CATBOOST_INTEGRATION_SUMMARY.md  RESEARCH_PAPER_OBJECTIVES.md  RESEARCH_PAPER_PROBLEM_STATEMENT.md  compare_all_models.py  feature_engineering.py  generate_visualizations.py  train_advanced_neural_networks.py  train_forex_models.py  visualize_neural_networks.py
models/: model_registry.json
plans/: IMPLEMENTATION_ROADMAP.md  LLM_MODEL_SELECTION_GUIDE.md  QUICK_START.md  TODO.md  currency_assistant_arch.md  decision-engine.plan.md  market-data-agent-plan.md  market-intelligence.md  price-prediction.md  supervisor-agent.plan.md  tui-interface.plan.md  web-ui.plan.md
scripts/: agentic_cli.py  agentic_cli_interactive.py  api_smoke_test.sh  generate_figure_4.py  register_catboost_model.py  test_catboost_prediction.py  test_catboost_save_load.py  test_model_confidence.py  train_ml_model.py
scripts_test/: test_calendar_generalized.py  test_concurrency.py  test_llm_timing.py  test_model_selection.py  test_news_sentiment.py  test_phase_1.py  test_phase_2.py  test_phase_3.py  test_profiling.py  test_source.py
src/: cache.py  config.py  health.py
tests/: conftest.py  debug_historical.py  demo_agent_scraping.py  examine_scraped_data.py  find_quote_calculators.py  test_agent_output.py  test_agent_scraping_tool.py  test_agentic_workflow.py  test_alternative_news.py  test_config.py  test_conversation_flows.py  test_converter_scraping.py  test_custom_scraping.py  test_detailed_cost_extraction.py  test_economic_calendar.py  test_exchange_rates.py  test_historical_data.py  test_integrated_system.py  test_interactive_scraping.py  (+9 more)
(+386 files in other folders)
