[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "currency-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core framework
    "langchain>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    
    # Configuration
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    
    # Database (SQLite - built-in, but need ORM)
    "sqlalchemy>=2.0.43",
    "alembic>=1.16.4",
    
    # Data providers
    "httpx>=0.28.1",
    "yfinance>=0.2.65",
    
    # ML
    "lightgbm>=4.0.0",
    "scikit-learn>=1.7.1",
    "pandas>=2.3.2",
    "numpy>=2.3.2",
    "shap>=0.44.0",
    
    # UI
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "rich>=13.7.0",
    "typer[all]>=0.12.0",
    
    # Utilities
    "matplotlib>=3.10.5",
    
    # Testing
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]

[project.scripts]
currency-assistant = "src.cli.main:app"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = ["**/*"]
