[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "currency-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.43",
    "alembic>=1.16.4",
    "httpx>=0.28.1",
    "yfinance>=0.2.65",
    "lightgbm>=4.0.0",
    "scikit-learn>=1.7.1",
    "pandas>=2.3.2",
    "numpy>=2.3.2",
    "shap>=0.44.0",
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "matplotlib>=3.10.5",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "python-dateutil>=2.9.0.post0",
    "watchfiles>=1.1.0",
    "thefuzz>=0.22.1",
    "python-levenshtein>=0.27.1",
]

[project.scripts]
currency-assistant = "src.cli.main:app"
currency-assistant-train = "src.cli.train:app"
currency-assistant-tui = "src.ui.tui.app:main"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = ["**/*"]
